# dagger-python-sdk

./: .gitignore  dagger.json  pyproject.toml
.dagger/: pyproject.toml
.dagger/src/basics/: __init__.py  main.py
scripts/: dagger-simple  seeder  serve
src/dagger_python_sdk/: __init__.py  __main__.py  utils.py
src/dagger_python_sdk/backend/: app.py  schemas.py
src/dagger_python_sdk/frontend/: index.html
src/dagger_python_sdk/frontend/css/: home.css
src/dagger_python_sdk/frontend/templates/: base.html  error.html  home.html  post.html  posts.html  user_posts.html
src/dagger_python_sdk/sqlmodel/: database.py  models.py
